[package]
name = "geox"
version = "0.5.2"
edition = "2021"
description = "Shim to simplify using PostGIS types with sqlx and async-graphql"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/geox"

[dependencies]
async-graphql = { version = "4.0.13", optional = true }
geo = "0.23.1"
geo-types = "0.7.8"
geozero = { version = "0.9.5", features = [
    "with-postgis-sqlx",
], optional = true }
serde = { version = "1.0.144", features = ["derive"], optional = true }
serde_json = { version = "1.0.85", optional = true }
sqlx = { version = "0.6.2", optional = true }

[dev-dependencies]
tokio = { version = "1.21.1", features = ["full"] }

[dev-dependencies.sqlx]
version = "0.6.2"
features = ["runtime-tokio-rustls", "postgres"]

[features]
sqlx = ["dep:sqlx", "geozero"]
serde = [
    "dep:serde",
    "geozero/with-geojson",
    "serde_json",
    "geo/serde",
    "geo-types/serde",
]
