[package]
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
description = "Shim to simplify using PostGIS types with sqlx and async-graphql"
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "geox"
repository = "https://github.com/bbqsrc/geox"
version = "0.6.0"

[dependencies]
async-graphql = {version = ">=4,<7", optional = true}
geo = ">=0.23,<0.29"
geo-types = "0.7.8"
geozero = {version = ">=0.9,<0.13", features = [
  "with-postgis-sqlx",
], optional = true}
serde = {version = "1.0.144", features = ["derive"], optional = true}
serde_json = {version = "1.0.85", optional = true}
sqlx = {version = "0.7.4", optional = true, features = ["runtime-tokio-rustls", "postgres"]}

[dev-dependencies]
tokio = { version = "1.21.1", features = ["full"] }
sqlx = {version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"]}

[features]
serde = [
  "dep:serde",
  "geozero/with-geojson",
  "serde_json",
  "geo/serde",
  "geo-types/serde",
]
sqlx = ["dep:sqlx", "geozero"]
